<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="5dp"
        app:cardUseCompatPadding="true"
        app:cardCornerRadius="5dp"
        >

        <!-- Row 1 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="10dp"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/bill_total"/>
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/billTotalText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textAlignment="textEnd"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:hint="@string/zero_dollar"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    />
            </LinearLayout>

            <!-- Row 2 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:layout_gravity="center"
                    android:text="@string/tip_percentage"/>
                <com.google.android.material.slider.Slider
                    android:id="@+id/tipPercentageSlider"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:valueFrom="0"
                    android:valueTo="30"
                    android:stepSize="1"
                    android:layout_weight="1"
                    android:value="15"
                    />
                <TextView
                    android:id="@+id/tipPercentageText"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/tip_percentage_start"
                    android:textAlignment="textEnd"
                    android:layout_marginEnd="15dp"
                    tools:ignore="RtlCompat" />

            </LinearLayout>

            <!-- Row 3 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:layout_gravity="center"
                    android:text="@string/split_count"/>
                <com.google.android.material.slider.Slider
                    android:id="@+id/splitCountSlider"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:valueFrom="1"
                    android:valueTo="20"
                    android:stepSize="1"
                    android:value="1"
                    android:layout_weight="1"
                    />
                <TextView
                    android:id="@+id/splitCountText"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/split_count_start"
                    android:textAlignment="textEnd"
                    android:layout_marginEnd="15dp"
                    tools:ignore="RtlCompat" />

            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="5dp"
        app:cardUseCompatPadding="true"
        app:cardCornerRadius="5dp"
        >

        <!-- Row 1 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="10dp"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/split_tip"/>
                <TextView
                    android:id="@+id/splitTipText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textAlignment="textEnd"
                    android:padding="15dp"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:hint="@string/zero_dollar"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    />
            </LinearLayout>

            <!-- Row 2 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/split_total"/>
                <TextView
                    android:id="@+id/splitTotalText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textAlignment="textEnd"
                    android:padding="15dp"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:hint="@string/zero_dollar"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="5dp"
        app:cardUseCompatPadding="true"
        app:cardCornerRadius="5dp"
        >

        <!-- Row 1 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="10dp"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/total_tip"/>
                <TextView
                    android:id="@+id/totalTipText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textAlignment="textEnd"
                    android:padding="15dp"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:hint="@string/zero_dollar"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    />
            </LinearLayout>

            <!-- Row 2 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/total"/>
                <TextView
                    android:id="@+id/totalText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textAlignment="textEnd"
                    android:padding="15dp"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:hint="@string/zero_dollar"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>